// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldError /> error field name is missing renders nothing 1`] = `<DocumentFragment />`;

exports[`<FieldError /> error is undefined renders nothing 1`] = `<DocumentFragment />`;

exports[`<FieldError /> error message is provided with a single message renders the provided message 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: background.criticalSubdued;
  padding-bottom: xs;
  padding-top: xs;
  padding-left: m;
  padding-right: m;
}

.c1 {
  box-sizing: border-box;
  color: text.critical;
  width: m;
  height: m;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: font-size-100;
  font-weight: 400;
  line-height: font-size-100;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<div
    class="c0"
    data-testid="error-test-input"
    id="error-test-input"
    role="alert"
  >
    <div
      class="c1 c2"
      color="text.critical"
      font-size="font-size-100"
      font-style="none"
      font-weight="400"
    >
      <p
        class="c3 c4"
        color="inherit"
      >
        Invalid field
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FieldError /> error message is provided with multiple messages renders all of the provided messages 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: background.criticalSubdued;
  padding-bottom: xs;
  padding-top: xs;
  padding-left: m;
  padding-right: m;
}

.c1 {
  box-sizing: border-box;
  color: text.critical;
  width: m;
  height: m;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: font-size-100;
  font-weight: 400;
  line-height: font-size-100;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<div
    class="c0"
    data-testid="error-test-input"
    id="error-test-input"
    role="alert"
  >
    <div
      class="c1 c2"
      color="text.critical"
      font-size="font-size-100"
      font-style="none"
      font-weight="400"
    >
      <p
        class="c3 c4"
        color="inherit"
      >
        Invalid field
      </p>
    </div>
    <div
      class="c1 c2"
      color="text.critical"
      font-size="font-size-100"
      font-style="none"
      font-weight="400"
    >
      <p
        class="c3 c4"
        color="inherit"
      >
        Other error
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FieldError /> error message with markdown with a single message renders the provided message with markup 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: background.criticalSubdued;
  padding-bottom: xs;
  padding-top: xs;
  padding-left: m;
  padding-right: m;
}

.c1 {
  box-sizing: border-box;
  color: text.critical;
  width: m;
  height: m;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: font-size-100;
  font-weight: 400;
  line-height: font-size-100;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: bold;
}

<div
    class="c0"
    data-testid="error-test-input"
    id="error-test-input"
    role="alert"
  >
    <div
      class="c1 c2"
      color="text.critical"
      font-size="font-size-100"
      font-style="none"
      font-weight="400"
    >
      <p
        class="c3 c4"
        color="inherit"
      >
        This is 
        <strong
          class="c3 c5"
          color="inherit"
          font-weight="bold"
        >
          an error
        </strong>
         with markdown
      </p>
    </div>
  </div>
</DocumentFragment>
`;
